load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "make-scenario",
    srcs = [
        "make-scenario.cpp",
    ],
    hdrs = [
        "make-scenario.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    visibility = ["//planning:__subpackages__"],
    deps = [
        "//planning/types",
    ],
)
