load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "revoy-space",
    srcs = [
        "revoy-space.cpp",
    ],
    hdrs = [
        "revoy-space.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    deps = [
        "//planning/mock-revoy-ev:holonomic",
        "//planning/types",
        "@ompl",
    ],
)

cc_library(
    name = "planners",
    srcs = [
        "coarse-planner.cpp",
        "planning-pipeline.cpp",
        "proximity-planner.cpp",
    ],
    hdrs = [
        "coarse-planner.h",
        "planning-pipeline.h",
        "proximity-planner.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    visibility = ["//planning:__subpackages__"],
    deps = [
        ":revoy-space",
        "//planning/collisions",
        "//planning/interface",
        "//planning/types",
        "@ompl",
    ],
)

cc_test(
    name = "test-planner-oneshot",
    srcs = ["test-planner-oneshot.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":planners",
        "//planning/make-scenario",
        "//planning/simpl-mcap",
        "@catch2//:catch2_main",
    ],
)
