load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "pure-c-wrapper",
    srcs = [
        "planning.cpp",
    ],
    hdrs = [
        "planning.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    visibility = ["//visibility:public"],
    deps = [
        "//planning/interface",
        "//planning/planners",
    ],
)

cc_test(
    name = "test-pure-c-wrapper",
    srcs = ["test-planning.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":pure-c-wrapper",
        "@catch2//:catch2_main",
    ],
)
