load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "types",
    srcs = [
        "types.cpp",
    ],
    hdrs = [
        "types.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    visibility = ["//planning:__subpackages__"],
    deps = [
        "@eigen",
    ],
)
